# esp-maze-runner

./: .gitignore  Cargo.toml  README.md  build.rs  sdkconfig.defaults
.cargo/: config.toml
hx8369/: CMakeLists.txt  hx8369.c  hx8369.h
lv/: CMakeLists.txt  gt911.c  gt911.h  hx8369.c  hx8369.h  i2c_manager.c  i2c_manager.h
src/: esp_lcd_backend.rs  gt911.rs  hx8369.rs  main.rs  maze.rs  maze_painter.rs  utils.rs
ui/: appwindow.slint
